--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -77,6 +77,8 @@ body {
 					height: 95vh;
 					.boardRow {
 						position: relative;
+						left: 0;
+						right: 0;
 						background-color: transparent;
 						clear: right;
 						.contain {
