--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -77,8 +77,7 @@ body {
 					height: 95vh;
 					.boardRow {
 						position: relative;
-						left: 0;
-						right: 0;
+						left: 1.25%;
 						background-color: transparent;
 						clear: right;
 						.contain {
