--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,9 +1,17 @@
+@import "../../../node_modules/sass-mediaqueries/_media-queries.scss";
+
+
 $darkBlue: #257985;
 $lightBlue: #5ea8a7;
 $white: #ffffff;
 $raspberry: #ff4447;
 $betterPink: #FF2B6D;
 $righteous: "Righteous", cursive;
+
+#containBoard, .centerBoard {
+	margin: none;
+	padding: none;
+}
 body {
 	font-family: $righteous;
 	text-align: center;
@@ -27,6 +35,7 @@ body {
 				height: 100%;
 				width: 100%;
 				#controlPanel {
+					font-size: 2vh;
 					h2 {
 						color: $darkBlue;
 						text-shadow: 1px 1px 1px $white;
@@ -114,6 +123,141 @@ body {
 				#board:hover{
 					.cellAlive, .cellDead {
 						box-shadow: inset 0px 0px 0px .25px black;
+					}
+				}
+			}
+		}
+	}
+}
+
+@include max-screen(680px) {
+	body {
+		font-family: $righteous;
+		text-align: center;
+		margin: none;
+		padding: none;
+		height: 100%;
+		width: 100%;
+		#Layout {
+			text-align: center;
+			margin: none;
+			padding: none;
+			height: 100%;
+			width: 100%;
+			#content {
+				background-color: $darkBlue;
+				text-align: center;
+				#game {
+					text-align: center;
+					padding: none;
+					padding: none;
+					margin: none;
+					height: 100%;
+					width: 100%;
+					.mobileClear {
+						width: 100%;
+					}
+					#controlPanel {
+						h2 {
+							color: $darkBlue;
+							text-shadow: 1px 1px 1px $white;
+						}
+						background-color: $lightBlue;
+						border: solid $white 2px;
+						border-radius: 4px;
+						padding: 5%;
+						margin: none;
+						#controlWidget {
+							h2 {
+								font-size: 50%;
+							}
+							padding: 5%;
+							border: solid $white 2px;
+							border-radius: 4px;
+							background-color: $darkBlue;
+							width: 100%;
+							button {
+								color: $white;
+								background-color: $lightBlue;
+								border: solid $darkBlue 2px;
+								border-radius: 4px;
+							}
+							button:hover, button:active, button:focus {
+								color: $lightBlue;
+								background-color: $white;
+								border: $white solid 1.5px;
+								outline: none;
+							}
+							#gen {
+								color: $white;
+							}
+						}
+						#info {
+							display: none;
+						}
+						.lineBreak {
+							text-align: left;
+							margin-top: 0%;
+							padding-top: 0%;
+							color: $white;
+							text-shadow: $darkBlue .5px .5px 1px;
+							border-bottom: solid $darkBlue 2px;
+						}
+					}
+					.centerBoard {
+						width: 20vh;
+						background-color: transparent;
+						float: right;
+					}
+					#board {
+						background-color: #87FFB5;
+						border: solid $white 1px;
+						margin-left: 0%;
+						padding: none;
+						margin: none;
+						width: 60vh;
+						height: 57vh;
+						float: right;
+						.boardRow {
+							position: relative;
+							left: 1.75%;
+							background-color: transparent;
+							clear: right;
+							.contain {
+								margin: none;
+								padding: none;
+								height: 100%;
+								width: 95%;
+							}
+							padding: none;
+							margin: none;
+							width: 100%;
+							height: .6666666667%;
+							.cellDead, .cellAlive {
+								// border-radius: 100%;
+								width: .6666666667%;
+								height: 100%;
+								margin: none;
+								padding: none;
+								float: left;
+							}
+							.cellAlive:hover, .cellDead:hover {
+								background-color: $white;
+							}
+							.cellDead {
+								background-color: transparent;
+							}
+							.cellAlive {
+								background-color: $betterPink;
+								// background-color: #FF9704;
+								box-shadow: inset 0px 0px 0px .25px $darkBlue;
+							}
+						}
+					}
+					#board:hover{
+						.cellAlive, .cellDead {
+							box-shadow: inset 0px 0px 0px .25px black;
+						}
 					}
 				}
 			}
